--- a/models/staging/sources.yml
+++ b/models/staging/sources.yml
@@ -9,7 +9,7 @@ sources:
       - name: taxi_data_combined
         description: "External table of taxi ride information, stored as CSV (gzipped) files in Cloud Storage"
         external:
-          location: 'gs://dtc_data_lake_zoomcamp_2023_us/data/fhv/fhv_tripdata_2019-*'
+          location: 'gs://dtc_data_lake_zoomcamp_2023_us/data/fhv/fhv_tripdata_2019-*.csv.gz'
           options:
             format: csv
             skip_leading_rows: 1
